lab3 update